Android Studio Code Cleanup